--- a/PG3_3_1.vcxproj
+++ b/PG3_3_1.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{17de8bff-4f3c-4b66-92de-60eb15885ceb}</ProjectGuid>
     <RootNamespace>PG331</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>PG3</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
