--- a/PG3_3_1.vcxproj.filters
+++ b/PG3_3_1.vcxproj.filters
@@ -26,5 +26,8 @@
     <ClInclude Include="Enemy.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
+    <ClInclude Include="Calculation.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
